--- a/src/components/left_menu/LeftMenu.css
+++ b/src/components/left_menu/LeftMenu.css
@@ -3,7 +3,7 @@
     background-color: #e5eaef;
     width: 220px;
     transition: transform 0.3s ease-in-out;
-    box-shadow: 0px 1px 8px rgb(36 64 128 / 60%);
+    box-shadow: 0px 1px 8px rgba(52, 85, 159, 0.6);
     z-index: 1;
 }
 
